fixed alignment

--- a/Courses/JavaScript-Basics/jaeden_fuller_jsb_final_project/assets/style/sign-up.css
+++ b/Courses/JavaScript-Basics/jaeden_fuller_jsb_final_project/assets/style/sign-up.css
@@ -4,7 +4,7 @@
 #signupForm {
     background-color: #fff;
     width: 450px;
-    margin: 60px auto 0;
+    /* margin: 60px auto 0; */
     border-radius: 12px;
     height: 550px;
     padding: 20px;
@@ -60,4 +60,11 @@
 
 #signupForm input[type='button']:active {
     background-color: #00b488;
+}
+
+.align {
+    display: flex;
+    height: 90vh;
+    align-items: center;
+    justify-content: center;
 }
